crates/fixtures/tests/snapshots/hostile__style_expressions.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      229
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.expr-limit",
            "message": "size in style deep: the stored value \"expr1:((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((1pt))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))\" can't be read: nested deeper than 32 levels; it is kept, and ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 9733,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "36@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.expr-limit",
            "message": "size in style wide: the stored value \"expr1:1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt + 1pt\" can't be read: more than 256 nodes in one expression; it is kept, and ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 20480
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 30213,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "64@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.type-error",
            "message": "size in style type-error: cannot multiply a length and a length; this layer's value is ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 40960
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 50693,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "92@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.type-error",
            "message": "size in style not-a-length: expected a length, found a number; this layer's value is ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 61440
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 71173,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "120@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.unknown-function",
            "message": "size in style unknown-function: no function called frob is registered; this layer's value is ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 81920
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 91653,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "148@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.function-failed",
            "message": "size in style function-fails: ratio failed: the second term of a ratio is zero; this layer's value is ignored and the value inherited from before is used",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 102400
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 112133,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "176@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.unparsed",
            "message": "size in style from-the-future: the stored value \"expr2:quantum(3)\" can't be read: not a length this engine knows (a newer format, or damaged); it is kept, and ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 122880
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 132613,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    },
    {
      "node": "204@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "default"
        },
        "notes": [
          {
            "severity": "warning",
            "code": "style.unparsed",
            "message": "size in style damaged: the stored value \"furlongs:5\" can't be read: not a length this engine knows (a newer format, or damaged); it is kept, and ignored",
            "bytes": null
          }
        ]
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Under a hostile style.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 143360
            },
            "width": 225280,
            "height": 12288
          },
          "baseline": 153093,
          "width": 95805,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 95805
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": []
}
