crates/fixtures/tests/snapshots/hostile__table_concurrent_overlapping_spans.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      89
    ],
    [
      2,
      1
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "29@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 1
          },
          "preview": "a",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 68267,
            "height": 12288
          },
          "baseline": 9733,
          "width": 5212,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 1
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 5212
            }
          ]
        }
      ]
    },
    {
      "node": "49@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 1
          },
          "preview": "c",
          "rect": {
            "origin": {
              "x": 68267,
              "y": 0
            },
            "width": 34133,
            "height": 12288
          },
          "baseline": 9733,
          "width": 4997,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 1
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 68267,
              "width": 4997
            }
          ]
        }
      ]
    },
    {
      "node": "84@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 1
          },
          "preview": "f",
          "rect": {
            "origin": {
              "x": 68267,
              "y": 20480
            },
            "width": 34133,
            "height": 12288
          },
          "baseline": 30213,
          "width": 3625,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 1
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 68267,
              "width": 3625
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "error",
      "code": "layout.table-invalid",
      "subject": {
        "kind": "node",
        "id": "34@1"
      },
      "message": "invalid or duplicate cell column",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "layout.table-invalid",
      "subject": {
        "kind": "node",
        "id": "59@1"
      },
      "message": "invalid or duplicate cell column",
      "bytes": null
    },
    {
      "severity": "error",
      "code": "layout.table-invalid",
      "subject": {
        "kind": "node",
        "id": "69@1"
      },
      "message": "invalid or duplicate cell column",
      "bytes": null
    }
  ]
}
